// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block statements includes surrounding whitespace for a for-loop body 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 22,
            "line": 2,
          },
        },
        "statements": [
          For {
            "body": Block {
              "location": {
                "end": {
                  "column": 16,
                  "line": 5,
                },
                "file": "",
                "start": {
                  "column": 38,
                  "line": 3,
                },
              },
              "statements": [
                Print {
                  "expressions": [
                    Variable {
                      "name": {
                        "isReserved": false,
                        "kind": "Identifier",
                        "literal": undefined,
                        "location": {
                          "end": {
                            "column": 27,
                            "line": 4,
                          },
                          "file": "",
                          "start": {
                            "column": 26,
                            "line": 4,
                          },
                        },
                        "text": "i",
                      },
                    },
                  ],
                  "tokens": {
                    "print": {
                      "isReserved": true,
                      "kind": "Print",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 25,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 20,
                          "line": 4,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
            "counterDeclaration": Assignment {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 21,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 20,
                    "line": 3,
                  },
                },
                "text": "i",
              },
              "tokens": {
                "equals": {
                  "isReserved": false,
                  "kind": "Equal",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 23,
                      "line": 3,
                    },
                    "file": "",
                    "start": {
                      "column": 22,
                      "line": 3,
                    },
                  },
                  "text": "=",
                },
              },
              "value": Literal {
                "_location": {
                  "end": {
                    "column": 25,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 24,
                    "line": 3,
                  },
                },
                "value": Int32 {
                  "inArray": false,
                  "kind": 4,
                  "value": 0,
                },
              },
            },
            "finalValue": Literal {
              "_location": {
                "end": {
                  "column": 31,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 29,
                  "line": 3,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 10,
              },
            },
            "increment": Literal {
              "_location": {
                "end": {
                  "column": 38,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 37,
                  "line": 3,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 1,
              },
            },
            "tokens": {
              "endFor": {
                "isReserved": false,
                "kind": "EndFor",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 23,
                    "line": 5,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 5,
                  },
                },
                "text": "End For",
              },
              "for": {
                "isReserved": true,
                "kind": "For",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 19,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "text": "For",
              },
              "step": {
                "isReserved": true,
                "kind": "Step",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 36,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 32,
                    "line": 3,
                  },
                },
                "text": "Step",
              },
              "to": {
                "isReserved": true,
                "kind": "To",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 28,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 26,
                    "line": 3,
                  },
                },
                "text": "To",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 6,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 6,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`block statements includes surrounding whitespace for function body 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 4,
          },
          "file": "",
          "start": {
            "column": 22,
            "line": 2,
          },
        },
        "statements": [
          Assignment {
            "name": {
              "isReserved": false,
              "kind": "Identifier",
              "literal": undefined,
              "location": {
                "end": {
                  "column": 19,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 16,
                  "line": 3,
                },
              },
              "text": "age",
            },
            "tokens": {
              "equals": {
                "isReserved": false,
                "kind": "Equal",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 21,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 20,
                    "line": 3,
                  },
                },
                "text": "=",
              },
            },
            "value": Literal {
              "_location": {
                "end": {
                  "column": 23,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 22,
                  "line": 3,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 1,
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 4,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 4,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`block statements includes surrounding whitespace for if-elseif-else statements 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": 12,
            "line": 10,
          },
          "file": "",
          "start": {
            "column": 22,
            "line": 2,
          },
        },
        "statements": [
          If {
            "condition": Literal {
              "_location": {
                "end": {
                  "column": 23,
                  "line": 3,
                },
                "file": "",
                "start": {
                  "column": 19,
                  "line": 3,
                },
              },
              "value": BrsBoolean {
                "inArray": false,
                "kind": 2,
                "value": true,
              },
            },
            "elseBranch": Block {
              "location": {
                "end": {
                  "column": 16,
                  "line": 9,
                },
                "file": "",
                "start": {
                  "column": 20,
                  "line": 7,
                },
              },
              "statements": [
                Print {
                  "expressions": [
                    Literal {
                      "_location": {
                        "end": {
                          "column": 32,
                          "line": 8,
                        },
                        "file": "",
                        "start": {
                          "column": 26,
                          "line": 8,
                        },
                      },
                      "value": BrsString {
                        "inArray": false,
                        "kind": 3,
                        "value": "true",
                      },
                    },
                  ],
                  "tokens": {
                    "print": {
                      "isReserved": true,
                      "kind": "Print",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 25,
                          "line": 8,
                        },
                        "file": "",
                        "start": {
                          "column": 20,
                          "line": 8,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
            "elseIfs": [
              {
                "condition": Literal {
                  "_location": {
                    "end": {
                      "column": 28,
                      "line": 5,
                    },
                    "file": "",
                    "start": {
                      "column": 24,
                      "line": 5,
                    },
                  },
                  "value": BrsBoolean {
                    "inArray": false,
                    "kind": 2,
                    "value": true,
                  },
                },
                "thenBranch": Block {
                  "location": {
                    "end": {
                      "column": 16,
                      "line": 7,
                    },
                    "file": "",
                    "start": {
                      "column": 33,
                      "line": 5,
                    },
                  },
                  "statements": [
                    Print {
                      "expressions": [
                        Literal {
                          "_location": {
                            "end": {
                              "column": 32,
                              "line": 6,
                            },
                            "file": "",
                            "start": {
                              "column": 26,
                              "line": 6,
                            },
                          },
                          "value": BrsString {
                            "inArray": false,
                            "kind": 3,
                            "value": "true",
                          },
                        },
                      ],
                      "tokens": {
                        "print": {
                          "isReserved": true,
                          "kind": "Print",
                          "literal": undefined,
                          "location": {
                            "end": {
                              "column": 25,
                              "line": 6,
                            },
                            "file": "",
                            "start": {
                              "column": 20,
                              "line": 6,
                            },
                          },
                          "text": "print",
                        },
                      },
                    },
                  ],
                },
              },
            ],
            "thenBranch": Block {
              "location": {
                "end": {
                  "column": 16,
                  "line": 5,
                },
                "file": "",
                "start": {
                  "column": 28,
                  "line": 3,
                },
              },
              "statements": [
                Print {
                  "expressions": [
                    Literal {
                      "_location": {
                        "end": {
                          "column": 32,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 26,
                          "line": 4,
                        },
                      },
                      "value": BrsString {
                        "inArray": false,
                        "kind": 3,
                        "value": "true",
                      },
                    },
                  ],
                  "tokens": {
                    "print": {
                      "isReserved": true,
                      "kind": "Print",
                      "literal": undefined,
                      "location": {
                        "end": {
                          "column": 25,
                          "line": 4,
                        },
                        "file": "",
                        "start": {
                          "column": 20,
                          "line": 4,
                        },
                      },
                      "text": "print",
                    },
                  },
                },
              ],
            },
            "tokens": {
              "else": {
                "isReserved": true,
                "kind": "Else",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 20,
                    "line": 7,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 7,
                  },
                },
                "text": "else",
              },
              "elseIfs": [
                {
                  "isReserved": false,
                  "kind": "ElseIf",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": 23,
                      "line": 5,
                    },
                    "file": "",
                    "start": {
                      "column": 16,
                      "line": 5,
                    },
                  },
                  "text": "else if",
                },
              ],
              "endIf": {
                "isReserved": false,
                "kind": "EndIf",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 22,
                    "line": 9,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 9,
                  },
                },
                "text": "end if",
              },
              "if": {
                "isReserved": true,
                "kind": "If",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 18,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 16,
                    "line": 3,
                  },
                },
                "text": "if",
              },
              "then": {
                "isReserved": true,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": 28,
                    "line": 3,
                  },
                  "file": "",
                  "start": {
                    "column": 24,
                    "line": 3,
                  },
                },
                "text": "then",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 19,
            "line": 10,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 10,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": {
          "column": 16,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;
